--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/space-grotesk": "^4.5.13",
+    "framer-motion": "^10.11.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
